DIG-3807: Changed copyright notice. Minor copy change.

--- a/resources/index.hbs
+++ b/resources/index.hbs
@@ -1,5 +1,5 @@
 {{!
-Copyright 2017 (C) Diglias AB
+Copyright 2019 (C) IDFyed Solutions AB
 @author jonas
 }}
 {{> header}}
@@ -30,7 +30,7 @@ Copyright 2017 (C) Diglias AB
 </form>
 <hr>
 <h2>App Initiated</h2>
-<p>The app initiated API normally starts when the user scans a static QR code in the physical world. The qr code can
+<p>The app initiated flow normally starts when the user scans a static QR code in the physical world. The qr code can
     contain a payload that is handed over to the target application.</p>
 <form method="post" action="/app-initiated/emulate/">
     <p><label>Payload: </label>
