Fixed misepllings and typos

--- a/resources/cancel.hbs
+++ b/resources/cancel.hbs
@@ -4,6 +4,6 @@ Copyright 2019 (C) IDFyed Solutions AB
 }}
 {{> header}}
 {{> nav}}
-<h1>Canceled</h1>
+<h1>Cancelled</h1>
 <p>Authentication cancled by user</p>
 {{> footer}}
