--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,8 +10,8 @@ a {
 }
 
 .dButton {
-    background-color: #56ad71;
-    color: white;
+    background-color: #FFC800;
+    color: black;
 
     -moz-border-radius:5px;
     -webkit-border-radius:5px;
@@ -30,6 +30,6 @@ a {
 }
 
 .dButton:active {
-    background-color: #006a4b;
+    background-color: rgb(230, 180, 0);
 }
 
