DIG-4267: Update Idfyed GO to Idfyed

--- a/resources/index.hbs
+++ b/resources/index.hbs
@@ -3,7 +3,7 @@ Copyright 2019 (C) Idfyed Solutions AB
 @author jonas
 }}
 {{> header}}
-<h1>Idfyed GO Sample Application</h1>
+<h1>Idfyed Sample Application</h1>
 <h2>Authenticate</h2>
 <p>When authenticating users a set of attributes will be requested from the user trough the Idfyed app. By default
     the set of attributes requested is defined in the configuration. Using EAPI it is possible to limit the requested
