--- a/resources/success.hbs
+++ b/resources/success.hbs
@@ -5,7 +5,7 @@ Copyright 2019 (C) Idfyed Solutions AB
 {{> header}}
 {{> nav}}
 <h1>Success</h1>
-<p>Authenticaton sucessful, the following data was received from the Idfyed GO service.</p>
+<p>Authenticaton sucessful, the following data was received from the Idfyed service.</p>
 <table>
     <tr>
         <th>Parameter</th>
