--- a/resources/partials/header.hbs
+++ b/resources/partials/header.hbs
@@ -4,7 +4,7 @@ Copyright 2019 (C) Idfyed Solutions AB
 }}
 <!DOCTYPE html>
 <html>
-<head><title>Idfyed GO Sample Application</title>
+<head><title>Idfyed Sample Application</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
